Hash password in model and refactor a bit
